# Volt-cpp

./: .gitignore  CMakeLists.txt
scripts/: build.ps1
volt/: CMakeLists.txt
volt/src/: Volt.h  vtpch.h
volt/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
volt/src/Volt/: Application.cpp  Application.h  EntryPoint.h  Window.h
volt/src/Volt/Core/: Base.h  Exit.h  ExitCodes.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h
volt/src/Volt/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
volt/src/Volt/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
volt/src/Volt/Util/: Types.h
volt/src/Volt/Util/Types/: Vector2.h
voltTest/: CMakeLists.txt
voltTest/src/: main.cpp
